Kubernetes/Nextcloud/yamls/08-nextcloud-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-exporter
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-exporter
  template:
    metadata:
      labels:
        app: nextcloud-exporter
    spec:
      containers:
      - name: nextcloud-exporter
        image: xperimental/nextcloud-exporter:latest
        ports:
        - containerPort: 9205
          name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-exporter
  namespace: nextcloud
  labels:
    app: nextcloud-exporter
spec:
  type: ClusterIP
  ports:
  - port: 9205
    protocol: TCP
    name: http
  selector:
    app: nextcloud-exporter
