Kubernetes/Nextcloud/yamls/07-nextcloud-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud 
  labels:
    app: nextcloud 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud 
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
      - name: nextcloud-app
        persistentVolumeClaim: 
          claimName: nextcloud-pvc
      - name: nextcloud-data
        persistentVolumeClaim: 
          claimName: nextcloud-data-pvc
      containers:
        - image: nextcloud:apache
          name: nextcloud 
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-app
            - mountPath: /var/www/html/data
              name: nextcloud-data
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: nextcloud
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-https-redirect
  namespace: nextcloud
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-websecure
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`nextcloud.urbaman.it`)
    kind: Rule
    services:
    - name: nextcloud
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-web
  namespace: nextcloud
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`nextcloud.urbaman.it`)
    kind: Rule
    services:
    - name: nextcloud
      port: 8080
    middlewares:
      - name: nextcloud-https-redirect
