Kubernetes/Nextcloud/yamls/nextcloud-deploy.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud 
  labels:
    app: nextcloud 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nextcloud 
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
      - name: nextcloud-app
        persistentVolumeClaim: 
          claimName: nextcloud-pvc
      - name: nextcloud-data
        persistentVolumeClaim: 
          claimName: nextcloud-data-pvc
      containers:
        - image: nextcloud:apache
          name: nextcloud 
          ports:
            - containerPort: 80
#          resources:
#            limits:
#              cpu: 1000m
#              memory: 2Gi
#            requests:
#              cpu: 500m
#              memory: 1Mi
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-app
            - mountPath: /var/www/html/data
              name: nextcloud-data
---
#apiVersion: autoscaling/v2
#kind: HorizontalPodAutoscaler
#metadata:
#  name: nextcloud
#  namespace: nextcloud
#  labels:
#    app: nextcloud
#spec:
#  scaleTargetRef:
#    apiVersion: apps/v1
#    kind: Deployment
#    name: nextcloud
#  minReplicas: 1
#  maxReplicas: 9
#  metrics:
#  - type: Resource
#    resource:
#      name: cpu
#      target:
#        type: Utilization
#        averageUtilization: 50
#  - type: Resource
#    resource:
#      name: memory
#      target:
#        type: Utilization
#        averageUtilization: 50
#---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: nextcloud
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-nextcloud-https-redirect
  namespace: nextcloud
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-nextcloud-security
  namespace: nextcloud
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
    customFrameOptionsValue: sameorigin
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-nextcloud-websecure
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.urbaman.it`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
          serversTransport: traefik-nextcloud-transport
      middlewares:
        - name: traefik-nextcloud-security
  tls:
    secretName: nextcloud-urbaman
    options:
      name: traefik-nextcloud-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-nextcloud-web
  namespace: nextcloud
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nextcloud.urbaman.it`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
      middlewares:
        - name: traefik-nextcloud-https-redirect
